Update sign up APIs